# uwin-old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_homm3_benchmark.py
ext-deps/vixl/: CMakeLists.txt
hash_function_study/: basic_block_addresses.txt  study.py
include/: fcaseopen.h  stb_ds.h
include/halfix/: cpuapi.h
include/halfix/cpu/: cpu.h  fpu.h  instrument.h  libcpu.h  opcodes.h  ops.h  simd.h
include/sljit/: sljitConfig.h  sljitConfigInternal.h  sljitLir.h
include/uwin/: common_def.h  handletable.h  mem.h  target_abi.h  uwin.h  uwindows.h  uwinerr.h
include/uwin-jit/: aarch64_code_generator.h  basic_block.h  basic_block_cache.h  basic_block_compiler.h  cpu_context.h  executable_memory_allocator.h  sljit.h  types.h
include/uwin/kobj/: kcond.h  kdir.h  kdummy.h  kfile.h  kmut.h  kobj.h  ksem.h  ksurf.h  ksurf_types.h  kthread.h
include/uwin/sdl/: sdl_ctx.h
include/uwin/sdl/kobj/: ksurf_sdl.h
include/uwin/util/: align.h  file.h  log.h  mem.h  str.h
src/: fcaseopen.c  fcaseopen.cpp  ini.c  main.c  main.cpp
src/halfix/: access.c  cpu.c  decoder.c  eflags.c  fpu.c  libcpu.c  mmu.c  opcodes.c  prot.c  seg.c  smc.c  softfloat.c  trace.c
src/halfix/ops/: arith.c  bit.c  ctrlflow.c  misc.c  simd.c  stack.c  string.c
src/sljit/: sljitLir.c  sljitProtExecAllocator.c
src/uwin/: cfg.c  cfg.cpp  file.cpp  halfix_cpu_loop.c  halfix_cpu_loop.cpp  handletable.c  handletable.cpp  jit_cpu_loop.c  jit_cpu_loop.cpp  ldr.c  ldr.cpp  sdl_gmq.c  sdl_ui.c  sdl_ui_gmq.cpp  syncronization.c  syncronization.cpp  syscall.c  syscall.cpp  thread.c  thread.cpp  win32_mq.c  win32_mq.cpp
src/uwin-jit/: aarch64_code_generator.cpp  basic_block.cpp  basic_block_cache.cpp  basic_block_compiler.cpp  executable_memory_allocator.cpp  sljit.cpp
src/uwin/host/posix/: jitmem.cpp  memory_map.cpp  sighandler.cpp  time.c
src/uwin/sdl/: sdl_ctx.cpp
src/uwin/sdl/kobj/: ksurf_sdl.cpp
src/uwin/target_dlls/: .gitignore  CMakeLists.txt  Makefile  Toolchain-mingw-w64.cmake  build_dll_archive.py  common.mak  common_dll.mak  gen_stub.py
src/uwin/target_dlls/ADVAPI32/: CMakeLists.txt  Makefile  advapi32.c  advapi32.def
src/uwin/target_dlls/BINKW32/: CMakeLists.txt  Makefile  binkw32.c  binkw32.def  binkw32_stubs.c
src/uwin/target_dlls/DDRAW/: CMakeLists.txt  Makefile  ddraw.c  ddraw.def  mkboilerplate.py  uw_ddraw.c  uw_ddraw.h  uw_ddraw_stubs.c  uw_ddrawsurface.c  uw_ddrawsurface_stubs.c  uw_vtables.c
src/uwin/target_dlls/GDI32/: CMakeLists.txt  Makefile  gdi32.c  gdi32.def  gdi32_stubs.c
src/uwin/target_dlls/IFC20/: CMakeLists.txt  Makefile  ifc20.c  ifc20.def  ifc20.s
src/uwin/target_dlls/INIT/: CMakeLists.txt  Makefile  init.c  init.def  init.s
src/uwin/target_dlls/JITTEST/: CMakeLists.txt  Makefile  mktest.py
src/uwin/target_dlls/KERNEL32/: CMakeLists.txt  Makefile  kernel32.c  kernel32.def  kernel32_stubs.c
src/uwin/target_dlls/KSVC/: CMakeLists.txt  Makefile  ksvc.c  ksvc.def  libc.c  printf.c
src/uwin/target_dlls/KSVC/heap/: rpmalloc.c
src/uwin/target_dlls/MSS32/: CMakeLists.txt  Makefile  mss32.c  mss32.def  mss32_stubs.c
src/uwin/target_dlls/OLE32/: CMakeLists.txt  Makefile  ole32.c  ole32.def
src/uwin/target_dlls/SHELL32/: CMakeLists.txt  Makefile  shell32.def  shell32_stubs.c
src/uwin/target_dlls/USER32/: CMakeLists.txt  Makefile  needed_window_messages.txt  user32.c  user32.def  user32_stubs.c
src/uwin/target_dlls/VERSION/: CMakeLists.txt  Makefile  version.c  version.def  version_stubs.c
src/uwin/target_dlls/WINMM/: CMakeLists.txt  Makefile  winmm.c  winmm.def  winmm_stubs.c
src/uwin/target_dlls/WSOCK32/: CMakeLists.txt  Makefile  wsock32.def  wsock32_stubs.c
src/uwin/target_dlls/include/: ksvc.h  printf.h  rpmalloc.h  stubhlp.h
src/uwin/util/: file.c  mem.cpp  str.c  str.cpp
